src/current/_includes/v20.2/backups/backup-options.md
 Option                                                          | Value                   | Description
-----------------------------------------------------------------+-------------------------+------------------------------
`revision_history`<a name="with-revision-history"></a>           | N/A                     | Create a backup with full [revision history](take-backups-with-revision-history-and-restore-from-a-point-in-time.html), which records every change made to the cluster within the garbage collection period leading up to and including the given timestamp.
`encryption_passphrase`<a name="with-encryption-passphrase"></a> | [`STRING`](string.html) | The passphrase used to [encrypt the files](take-and-restore-encrypted-backups.html) (`BACKUP` manifest and data files) that the `BACKUP` statement generates. This same passphrase is needed to decrypt the file when it is used to [restore](take-and-restore-encrypted-backups.html) and to list the contents of the backup when using [`SHOW BACKUP`](show-backup.html). There is no practical limit on the length of the passphrase.
`DETACHED`                                                       | N/A                     | <span class="version-tag">New in v20.2:</span> When a backup runs in `DETACHED` mode, it will execute asynchronously. The job ID will be returned after the backup job creation completes. Note that with `DETACHED` specified, further job information and the job completion status will not be returned. For more on the differences between the returned job data, see the [example](backup.html#run-a-backup-asynchronously) below. To check on the job status, use the [`SHOW JOBS`](show-jobs.html) statement. <br><br>To run a backup within a [transaction](transactions.html), use the `DETACHED` option.
`kms`                                                            | [`STRING`](string.html) | <span class="version-tag">New in v20.2:</span> The [key management service (KMS) URI](take-and-restore-encrypted-backups.html#aws-kms-uri-format) (or a [comma-separated list of URIs](take-and-restore-encrypted-backups.html#take-a-backup-with-multi-region-encryption)) used to encrypt the files (`BACKUP` manifest and data files) that the `BACKUP` statement generates. This same KMS URI is needed to decrypt the file when it is used to [restore](take-and-restore-encrypted-backups.html#restore-from-an-encrypted-backup-with-aws-kms) and to list the contents of the backup when using [`SHOW BACKUP`](show-backup.html). <br/><br/>Currently, only AWS KMS is supported.
